// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`foldMeasures > 0 dimensions, 0 measures 1`] = `
{
  "dataset": [],
  "foldInfo": {
    "foldMap": {},
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > 0 dimensions, 1 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10,
      "profit": 10,
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > 0 dimensions, 2 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "profit": 10,
      "sales": 100,
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "profit": 10,
      "sales": 100,
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
      "sales": "Sales",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > 0 dimensions, 5 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "cost",
      "__MeaName__": "Cost",
      "__MeaValue__": 33,
      "cost": 33,
      "number": 1,
      "price": 100,
      "profit": 10,
      "sales": 100,
    },
    {
      "__MeaId__": "cost",
      "__MeaName__": "Cost",
      "__MeaValue__": 33,
      "cost": 33,
      "number": 1,
      "price": 100,
      "profit": 10,
      "sales": 100,
    },
    {
      "__MeaId__": "cost",
      "__MeaName__": "Cost",
      "__MeaValue__": 33,
      "cost": 33,
      "number": 1,
      "price": 100,
      "profit": 10,
      "sales": 100,
    },
    {
      "__MeaId__": "cost",
      "__MeaName__": "Cost",
      "__MeaValue__": 33,
      "cost": 33,
      "number": 1,
      "price": 100,
      "profit": 10,
      "sales": 100,
    },
    {
      "__MeaId__": "cost",
      "__MeaName__": "Cost",
      "__MeaValue__": 33,
      "cost": 33,
      "number": 1,
      "price": 100,
      "profit": 10,
      "sales": 100,
    },
  ],
  "foldInfo": {
    "foldMap": {
      "cost": "Cost",
      "number": "Number",
      "price": "Price",
      "profit": "Profit",
      "sales": "Sales",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > 1 dimensions, 1 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2019",
      "sales": 100,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2020",
      "sales": 3200,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2021",
      "sales": 300,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2022",
      "sales": 2400,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2023",
      "sales": 500,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2019",
      "sales": 100,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2020",
      "sales": 3200,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2021",
      "sales": 300,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2022",
      "sales": 2400,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2023",
      "sales": 500,
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > 2 dimensions, 1 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "B",
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > 2 dimensions, 2 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "B",
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
      "sales": "Sales",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > foldMeasures 0 dimensions 2 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "profit": 10,
      "sales": 100,
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "profit": 10,
      "sales": 100,
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
      "sales": "Sales",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > foldMeasures 1 dimensions 1 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2019",
      "sales": 100,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2020",
      "sales": 3200,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2021",
      "sales": 300,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2022",
      "sales": 2400,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2023",
      "sales": 500,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2019",
      "sales": 100,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2020",
      "sales": 3200,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2021",
      "sales": 300,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2022",
      "sales": 2400,
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": undefined,
      "date": "2023",
      "sales": 500,
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > foldMeasures 2 dimensions 1 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "B",
    },
    {
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "B",
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;

exports[`foldMeasures > foldMeasures 2 dimensions 2 measures 1`] = `
{
  "dataset": [
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "A",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 100,
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 3200,
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 300,
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400,
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "B",
    },
    {
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 500,
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "B",
    },
  ],
  "foldInfo": {
    "foldMap": {
      "profit": "Profit",
      "sales": "Sales",
    },
    "measureId": "__MeaId__",
    "measureName": "__MeaName__",
    "measureValue": "__MeaValue__",
  },
}
`;
